--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "url": "git+https://github.com/IustusRenidet/POrpt-electron.git"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.0",
+    "dotenv": "^16.4.5",
+    "express": "^5.1.0",
     "node-firebird": "^0.8.9",
     "pdfmake": "^0.2.10",
-    "sqlite3": "^5.1.7",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^16.4.5"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "electron": "^33.2.1",
@@ -60,7 +61,6 @@
     }
   },
   "keywords": [],
-  "author": "RintelGatachi & J02V4N",
   "license": "ISC",
   "type": "commonjs",
   "bugs": {
