--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "node-firebird": "^0.8.9",
-    "node-jasper": "^0.2.5",
     "pdfkit": "^0.13.0",
     "sqlite3": "^5.1.7"
+  },
+  "optionalDependencies": {
+    "node-jasper": "^0.2.5"
   },
   "devDependencies": {
     "electron": "^33.2.1",
