--- a/reports/report-settings.json
+++ b/reports/report-settings.json
@@ -8,5 +8,18 @@
     "defaultReport": "poSummary",
     "dataSourceName": "poSummaryJson",
     "jsonQuery": "summary.items"
+  },
+  "branding": {
+    "headerTitle": "Reporte de PEOs - Consumo",
+    "headerSubtitle": "",
+    "footerText": "PEOrpt • Aspel SAE 9",
+    "letterheadEnabled": false,
+    "letterheadTop": "",
+    "letterheadBottom": "",
+    "remColor": "#2563eb",
+    "facColor": "#dc2626",
+    "restanteColor": "#16a34a",
+    "accentColor": "#1f2937",
+    "companyName": "SITTEL"
   }
 }
