Simplify SSITEL report wording and letterheads

--- a/reports/report-settings.json
+++ b/reports/report-settings.json
@@ -34,6 +34,6 @@
     "facColor": "#dc2626",
     "restanteColor": "#16a34a",
     "accentColor": "#1f2937",
-    "companyName": "SITTEL"
+    "companyName": "SSITEL"
   }
 }
