--- a/reports/report-settings.json
+++ b/reports/report-settings.json
@@ -25,9 +25,9 @@
     "headerTitle": "Reporte de PEOs - Consumo",
     "headerSubtitle": "",
     "footerText": "PEOrpt • Aspel SAE 9",
-    "letterheadEnabled": false,
-    "letterheadTop": "",
-    "letterheadBottom": "",
+    "letterheadEnabled": true,
+    "letterheadTop": "C:\\Users\\Frida Sophia\\Downloads\\icono peorpt.png",
+    "letterheadBottom": "C:\\Users\\Frida Sophia\\Downloads\\repository-open-graph-template.png",
     "remColor": "#2563eb",
     "facColor": "#dc2626",
     "restanteColor": "#16a34a",
