--- a/reports/report-settings.json
+++ b/reports/report-settings.json
@@ -25,7 +25,7 @@
     "headerTitle": "Reporte de PEOs - Consumo",
     "headerSubtitle": "",
     "footerText": "PEOrpt • Aspel SAE 9",
-    "letterheadEnabled": true,
+    "letterheadEnabled": false,
     "letterheadTop": "C:\\Users\\Frida Sophia\\Downloads\\icono peorpt.png",
     "letterheadBottom": "C:\\Users\\Frida Sophia\\Downloads\\repository-open-graph-template.png",
     "remColor": "#2563eb",
