--- a/reports/report-settings.json
+++ b/reports/report-settings.json
@@ -24,7 +24,7 @@
   "branding": {
     "headerTitle": "Reporte de POs - Consumo",
     "headerSubtitle": "",
-    "footerText": "POrpt • Aspel SAE 9",
+    "footerText": "POrpt • ICONET",
     "letterheadEnabled": false,
     "letterheadTop": "C:\\Users\\Frida Sophia\\Downloads\\icono peorpt.png",
     "letterheadBottom": "C:\\Users\\Frida Sophia\\Downloads\\repository-open-graph-template.png",
