--- a/reports/report-settings.json
+++ b/reports/report-settings.json
@@ -26,8 +26,8 @@
     "headerSubtitle": "",
     "footerText": "POrpt • ICONET",
     "letterheadEnabled": false,
-    "letterheadTop": "C:\\Users\\Frida Sophia\\Downloads\\icono peorpt.png",
-    "letterheadBottom": "C:\\Users\\Frida Sophia\\Downloads\\repository-open-graph-template.png",
+    "letterheadTop": "",
+    "letterheadBottom": "",
     "remColor": "#2563eb",
     "facColor": "#dc2626",
     "restanteColor": "#16a34a",
