--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^5.1.0",
     "node-firebird": "^0.8.9",
     "pdfkit": "^0.13.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "svg-to-pdfkit": "^0.1.8"
   },
   "devDependencies": {
     "@electron-forge/publisher-github": "^7.10.0",
